Created new design of widget containing radioGroup

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,10 @@
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE"/>
-                <action android:name="ActionReceiverWidget"/>
+                <action android:name="ru.sibsutis.metallwidgetgspp.value1"/>
+                <action android:name="ru.sibsutis.metallwidgetgspp.value2"/>
+                <action android:name="ru.sibsutis.metallwidgetgspp.value3"/>
+                <action android:name="ru.sibsutis.metallwidgetgspp.value4"/>
             </intent-filter>
             <meta-data android:name="android.appwidget.provider"
                 android:resource="@xml/info" />
