Made stable widget version (only for one widget). Also added some animation for loading data

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,8 @@
                 <action android:name="ru.sibsutis.metallwidgetgspp.value2"/>
                 <action android:name="ru.sibsutis.metallwidgetgspp.value3"/>
                 <action android:name="ru.sibsutis.metallwidgetgspp.value4"/>
+                <action android:name="ru.sibsutis.metallwidgetgspp.apprec"/>
+
             </intent-filter>
             <meta-data android:name="android.appwidget.provider"
                 android:resource="@xml/info" />
